# automated-bar

./: ..travis.yml.swp  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  ServoTest.cpp  generateDocumentationAndDeploy.sh  setup.py  travis.yml
Firmware/: CMakeLists.txt  dependencies.sh
Firmware/include/: Drinks.h  ServoHandler.h
Firmware/lib/HX711/: HX711.cpp  readScale.cpp
Firmware/src/: DrinksConfig.cpp  PyDrinkServer.cpp
Firmware/test/: Test_DrinksConfig.cpp
Hardware/: README.md  extrusion_clip.ipt  prox_base.ipt  servo.stl
Hardware/CAD/IPT Inventor files/: baseplate.ipt  bracket.ipt  clamp.ipt  clamp_cup.ipt  cup.ipt  extrusion_250.ipt  extrusion_300.ipt  extrusion_95.ipt  frame.iam  mainbar.ipt  optic_rail.iam  opticmount.ipt  plunger.ipt  screw.ipt  servo mount.dwg  servo.ipt  topbar.ipt  tube_clamp.ipt  ~servo mount.dwg.736.tmp
Hardware/CAD/STL print files/: baseplate.stl  extrusion_clip.stl  plunger.stl  prox_base.stl  tube_clamp.stl
Server/: index.py
Software/: README.md  build.sh  dependencies.sh  index.py
Software/Firmware/: CMakeLists.txt  README.md  dependencies.sh  main.cpp
Software/Firmware/include/: Drink.cpp  Drink.h  DrinkServer.h  Drinks.h  DrinksConfig.h  PiSetup.h  ProximitySensor.h  ServoHandler.h
Software/Firmware/lib/HX711/: CMakeLists.txt  HX711.cpp  HX711.h
Software/Firmware/src/: .ProximitySensor.cpp.swp  DrinkServer.cpp  Drinks.cpp  DrinksConfig.cpp  MultiServoControl.cpp  PiSetup.cpp  ProximitySensor.cpp  PyDrinkServer.cpp  ServoHandler.cpp
Software/Firmware/test/: CMakeLists.txt  Test_DrinksConfig.cpp
Software/Server/: database.py  index.py
Software/src/: CMakeLists.txt  MultiServoControl.cpp  index.py
Software/src/HX711/: HX711.cpp  HX711.h  gb_common.c  readScale.cpp  read_scale  read_scale.c
Software/src/qt GUI/: AutoBar.pro  Drinks.txt  addDrink.txt  adddrink.cpp  adddrink.h  adddrink.ui  avDrinks.txt  compile_commands.json  first.txt  main.cpp  mainwindow.cpp  mainwindow.ui  reDrink.cpp  reDrink.h  reDrink.ui  reply.txt
Software/src/test/: CMakeLists.txt  test.sh
